--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,6 +16,7 @@ django-filter==25.1
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 filelock==3.18.0
+gunicorn==23.0.0
 h11==0.14.0
 hyperlink==21.0.0
 idna==3.10
@@ -57,5 +58,6 @@ tzdata==2025.2
 urllib3==2.3.0
 w3lib==2.3.1
 websocket-client==1.8.0
+whitenoise==6.9.0
 wsproto==1.2.0
 zope.interface==7.2
